--- a/package.JSON
+++ b/package.JSON
@@ -1,9 +1,9 @@
 {
   "name": "collab-land-bot",
   "version": "1.0.0",
-  "main": "index.js",                  // ← change to your actual entry file name
+  "main": "index.js",            
   "scripts": {
-    "start": "node index.js"           // ← Railway needs this!
+    "start": "node index.js"          
   },
   "dependencies": {
     "discord.js": "^14.15.3"
